--- a/index.html
+++ b/index.html
@@ -51,14 +51,17 @@
   <div class="carousel">
     <div class="testimonial active">
       <p>"CyberShield Lite gave us a clear view of our weaknesses — simple and effective."</p>
+      <div class="stars">⭐⭐⭐⭐⭐</div>
       <strong>– NGO, Nairobi</strong>
     </div>
     <div class="testimonial">
       <p>"We received a detailed report with patch steps. The NDA gave us peace of mind."</p>
+      <div class="stars">⭐⭐⭐⭐</div>
       <strong>– Tech Startup, Westlands</strong>
     </div>
     <div class="testimonial">
       <p>"Affordable, easy to use, and no installation needed. Highly recommended."</p>
+      <div class="stars">⭐⭐⭐⭐⭐</div>
       <strong>– SME Owner, Mombasa</strong>
     </div>
   </div>
