--- a/index.html
+++ b/index.html
@@ -67,8 +67,9 @@
   </div>
 </section>
 
-  <footer>
+  <footer style="background-color:#0A1F44; color:white; text-align:center; padding:1.5rem;">>
     <p>&copy; 2025 CyberShield Lite. Securing Kenya's Digital Future.</p>
+    <img src="assets/footer.png" alt="CyberShield Lite Footer Logo" style="max-width:220px; margin-top:1rem;">
   </footer>
   <script>
 let index = 0;
