--- a/request.html
+++ b/request.html
@@ -27,8 +27,9 @@
     <iframe src="https://forms.gle/QVFX21bmYptGGRNBA" width="100%" height="800" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
   </main>
 
-  <footer>
+  <footer style="background-color:#0A1F44; color:white; text-align:center; padding:1.5rem;">
     <p>&copy; 2025 CyberShield Lite. Securing Kenya's Digital Future.</p>
+    <img src="assets/footer.png" alt="CyberShield Lite Footer Logo" style="max-width:220px; margin-top:1rem;">
   </footer>
 </body>
 </html>
