--- a/contact.html
+++ b/contact.html
@@ -30,9 +30,11 @@
     </ul>
   </main>
 
-  <footer style="background-color:#0A1F44; color:white; text-align:center; padding:1.5rem;">
-    <p>&copy; 2025 CyberShield Lite. Securing Kenya's Digital Future.</p>
-    <img src="assets/footer.png" alt="CyberShield Lite Footer Logo" style="max-width:220px; margin-top:1rem;">
+  <footer style="background-color:#0A1F44; color:white; text-align:center; padding:1.5rem 1rem 0 1rem;">
+    <p style="margin-bottom:1rem;">&copy; 2025 CyberShield Lite. Securing Kenya's Digital Future.</p>
+    <div style="margin:0; padding:0;">
+     <img src="assets/footer.png" alt="CyberShield Lite Footer Banner" style="width:100%; display:block; margin-top:0;">
+    </div>
   </footer>
 </body>
 </html>
