--- a/index.html
+++ b/index.html
@@ -83,12 +83,17 @@
   <a href="request.html" class="btn-primary">Book My Scan</a>
 </section>
 
-<footer style="background-color:#0A1F44; color:white; text-align:center; padding:1.5rem 1rem 0 1rem;">
-  <p>&copy; 2025 CyberShield Lite. Securing Kenya's Digital Future.</p>
-  <div style="margin:0; padding:0;">
-    <img src="assets/footer.png" alt="CyberShield Lite Footer Banner" style="width:100%; height:1.5cm; object-fit:cover; display:block;">
+<footer style="background-color:#0A1F44; color:white; text-align:center; padding:1.5rem 1rem 0.5rem 1rem;">
+  <p style="margin: 0 0 1rem 0; font-size: 1rem;">
+    &copy; 2025 CyberShield Lite. Securing Kenya's Digital Future.
+  </p>
+  <div style="width:100%; overflow:hidden; margin-top:0.5rem;">
+    <img src="assets/footer.png"
+         alt="CyberShield Lite Footer Banner"
+         style="width:100%; max-height:1.5cm; object-fit:contain; display:block;">
   </div>
 </footer>
+
 
 <script>
   document.addEventListener("DOMContentLoaded", function () {
