--- a/request.html
+++ b/request.html
@@ -27,9 +27,16 @@
     <iframe src="https://forms.gle/QVFX21bmYptGGRNBA" width="100%" height="800" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
   </main>
 
-  <footer style="background-color:#0A1F44; color:white; text-align:center; padding:1.5rem;">
-    <p>&copy; 2025 CyberShield Lite. Securing Kenya's Digital Future.</p>
-    <img src="assets/footer.png" alt="CyberShield Lite Footer Logo" style="max-width:220px; margin-top:1rem;">
-  </footer>
+  <footer style="background-color:#0A1F44; color:white; text-align:center; padding:1.5rem 1rem 0.5rem 1rem;">
+  <p style="margin: 0 0 1rem 0; font-size: 1rem;">
+    &copy; 2025 CyberShield Lite. Securing Kenya's Digital Future.
+  </p>
+  <div style="width:100%; overflow:hidden; margin-top:0.5rem;">
+    <img src="assets/footer.png"
+         alt="CyberShield Lite Footer Banner"
+         style="width:100%; max-height:1.5cm; object-fit:contain; display:block;">
+  </div>
+</footer>
+
 </body>
 </html>
