--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>CyberShield Lite — Cybersecurity Made Simple</title>
   <link rel="stylesheet" href="style.css"/>
-  <link rel="icon" href="assets/cybershield_logo.png" type="image/png">
+  <link rel="icon" href="assets/back.png" type="image/png">
 </head>
 <body>
 
 <header class="navbar">
   <div class="nav-container">
-    <img src="assets/cybershield_logo.png" alt="CyberShield Lite Logo" class="logo" />
+    <img src="assets/back.png" alt="CyberShield Lite Logo" class="logo" />
     <nav>
       <a href="index.html">Home</a>
       <a href="features.html">Features</a>
