--- a/documents.html
+++ b/documents.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <div class="nav-container">
-      <img src="assets/back.png" alt="CyberShield Lite Logo" class="logo" />
+      <img src="assets/bac.png" alt="CyberShield Lite Logo" class="logo" />
       <nav>
         <a href="index.html">Home</a>
         <a href="features.html">Features</a>
