--- a/request.html
+++ b/request.html
@@ -5,8 +5,38 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>CyberShield Lite | Request a Scan</title>
   <link rel="stylesheet" href="style.css"/>
+  <link rel="icon" href="assets/cybershield_logo.png" type="image/png">
+  <style>
+    .request-container {
+      max-width: 900px;
+      margin: auto;
+      padding: 2rem;
+    }
+
+    .request-container h1 {
+      font-size: 2rem;
+      color: #0A1F44;
+      margin-bottom: 1rem;
+    }
+
+    .request-container p {
+      font-size: 1.05rem;
+      color: #333;
+      line-height: 1.6;
+    }
+
+    iframe {
+      border: none;
+      width: 100%;
+      height: 800px;
+      margin-top: 1.5rem;
+      border-radius: 6px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.05);
+    }
+  </style>
 </head>
 <body>
+
   <header>
     <div class="nav-container">
       <img src="assets/back.png" alt="CyberShield Lite Logo" class="logo" />
@@ -21,22 +51,36 @@
     </div>
   </header>
 
-  <main style="padding: 2rem;">
-    <h1>Request a Vulnerability Scan</h1>
-    <p>Kindly fill the form below to authorize a scan. You will receive a report within 24 hours along with NDA and consent forms via email.</p>
-    <iframe src="https://forms.gle/QVFX21bmYptGGRNBA" width="100%" height="800" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+  <main class="request-container">
+    <h1>📋 Request a Vulnerability Scan</h1>
+    <p>
+      To begin your cybersecurity assessment, please complete the secure form below. Our team will conduct a vulnerability scan using Nmap and OpenVAS on your provided IP/domain.
+    </p>
+    <p>
+      Within 24 hours, you will receive:
+      <ul>
+        <li>📝 A signed Non-Disclosure Agreement (NDA)</li>
+        <li>✅ Scan Authorization Consent Form</li>
+        <li>📄 A detailed PDF report with vulnerabilities, CVEs, CVSS scores & patch advice</li>
+        <li>📬 Delivery via email or WhatsApp</li>
+      </ul>
+    </p>
+    <iframe src="https://forms.gle/QVFX21bmYptGGRNBA" loading="lazy">
+      Your browser does not support iframes. Please use this link to access the form:
+      <a href="https://forms.gle/QVFX21bmYptGGRNBA">Request Form</a>
+    </iframe>
   </main>
 
   <footer style="background-color:#0A1F44; color:white; text-align:center; padding:1.5rem 1rem 0.5rem 1rem;">
-  <p style="margin: 0 0 1rem 0; font-size: 1rem;">
-    &copy; 2025 CyberShield Lite. Securing Kenya's Digital Future.
-  </p>
-  <div style="width:100%; overflow:hidden; margin-top:0.5rem;">
-    <img src="assets/footer.png"
-         alt="CyberShield Lite Footer Banner"
-         style="width:100%; max-height:1.5cm; object-fit:contain; display:block;">
-  </div>
-</footer>
+    <p style="margin: 0 0 1rem 0; font-size: 1rem;">
+      &copy; 2025 CyberShield Lite. Securing Kenya's Digital Future.
+    </p>
+    <div style="width:100%; overflow:hidden; margin-top:0.5rem;">
+      <img src="assets/footer.png"
+           alt="CyberShield Lite Footer Banner"
+           style="width:100%; max-height:1.5cm; object-fit:contain; display:block;">
+    </div>
+  </footer>
 
 </body>
 </html>
