--- a/request.html
+++ b/request.html
@@ -54,7 +54,7 @@
   <main class="request-container">
     <h1>📋 Request a Vulnerability Scan</h1>
     <p>
-      To begin your Vulnerability assessment, please complete the secure form below. Our team will conduct a vulnerability scan using Nmap and OpenVAS on your provided IP/domain.
+      To begin your Vulnerability assessment, complete the secure form below. Our team will conduct a scan on your provided IP/Domain.
     </p>
     <p>
       Within 24 hours, you will receive:
