--- a/request.html
+++ b/request.html
@@ -59,7 +59,7 @@
     <p>
       Within 24 hours, you will receive:
       <ul>
-        <li>📝 A signed Non-Disclosure Agreement (NDA)</li>
+        <li>📝 A Non-Disclosure Agreement (NDA)</li>
         <li>✅ Scan Authorization Consent Form</li>
         <li>📄 A detailed PDF report with vulnerabilities, CVEs, CVSS scores & patch advice</li>
         <li>📬 Delivery via email or WhatsApp</li>
