--- a/Terms Policy.html
+++ b/Terms Policy.html
@@ -1,1 +1,85 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>CyberShield Lite | Terms of Service</title>
+  <link rel="stylesheet" href="style.css"/>
+  <style>
+    .legal-container {
+      max-width: 960px;
+      margin: auto;
+      padding: 2rem;
+      line-height: 1.6;
+    }
+    .legal-container h1 {
+      font-size: 2rem;
+      color: #0A1F44;
+      margin-bottom: 1rem;
+    }
+    .legal-container h2 {
+      font-size: 1.2rem;
+      margin-top: 1.5rem;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <div class="nav-container">
+      <img src="assets/back.png" alt="CyberShield Lite Logo" class="logo" />
+      <nav>
+        <a href="index.html">Home</a>
+        <a href="features.html">Features</a>
+        <a href="pricing.html">Pricing</a>
+        <a href="request.html">Request a Scan</a>
+        <a href="documents.html">Documents</a>
+        <a href="contact.html">Contact</a>
+      </nav>
+    </div>
+  </header>
+
+  <main class="legal-container">
+    <h1>Terms of Service</h1>
+    <p><strong>Effective Date:</strong> June 2, 2025</p>
+
+    <h2>1. Services Provided</h2>
+    <p>CyberShield Lite provides on-demand vulnerability scans using Nmap, OpenVAS, and other tools. Our reports include detected vulnerabilities (CVEs), severity ratings (CVSS), and patch suggestions.</p>
+
+    <h2>2. Legal Authorization</h2>
+    <p>By submitting a scan request, you confirm that you own or have legal permission to authorize the scanning of the target system(s). Unauthorized use is prohibited and may lead to legal consequences.</p>
+
+    <h2>3. Data Confidentiality</h2>
+    <p>All scan data, results, and communications are confidential. Our team signs an NDA upon request.</p>
+
+    <h2>4. Client Responsibilities</h2>
+    <ul>
+      <li>Provide accurate and lawful scan targets.</li>
+      <li>Use reports responsibly under applicable laws.</li>
+    </ul>
+
+    <h2>5. Limitations</h2>
+    <p>We do not guarantee the detection of all vulnerabilities. Findings are based on scan time and tool capabilities.</p>
+
+    <h2>6. Payment & Subscriptions</h2>
+    <p>Plans are billed monthly. Refunds are not issued after scans are performed.</p>
+
+    <h2>7. Liability Disclaimer</h2>
+    <p>We are not liable for data loss, misuse of scan data, or client-side remediation actions.</p>
+
+    <h2>8. Termination</h2>
+    <p>We may suspend or terminate services for misuse or ToS violations.</p>
+
+    <h2>9. Governing Law</h2>
+    <p>These terms are governed by Kenyan law and jurisdiction.</p>
+
+    <h2>10. Contact</h2>
+    <p>legal@cybershieldlite.com</p>
+  </main>
+
+  <footer style="background-color:#0A1F44; color:white; text-align:center; padding:1.5rem 1rem 0.5rem 1rem;">
+    <p style="margin: 0 0 1rem 0;">&copy; 2025 CyberShield Lite. Securing Kenya's Digital Future.</p>
+    <img src="assets/footer.png" alt="CyberShield Lite Footer Banner" style="width:100%; max-height:1.5cm; object-fit:contain; display:block;">
+  </footer>
+</body>
+</html>
 
