--- a/Privacy Policy.html
+++ b/Privacy Policy.html
@@ -1,1 +1,77 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>CyberShield Lite | Privacy Policy</title>
+  <link rel="stylesheet" href="style.css"/>
+  <style>
+    .legal-container {
+      max-width: 960px;
+      margin: auto;
+      padding: 2rem;
+      line-height: 1.6;
+    }
+    .legal-container h1 {
+      font-size: 2rem;
+      color: #0A1F44;
+      margin-bottom: 1rem;
+    }
+    .legal-container h2 {
+      font-size: 1.2rem;
+      margin-top: 1.5rem;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <div class="nav-container">
+      <img src="assets/back.png" alt="CyberShield Lite Logo" class="logo" />
+      <nav>
+        <a href="index.html">Home</a>
+        <a href="features.html">Features</a>
+        <a href="pricing.html">Pricing</a>
+        <a href="request.html">Request a Scan</a>
+        <a href="documents.html">Documents</a>
+        <a href="contact.html">Contact</a>
+      </nav>
+    </div>
+  </header>
+
+  <main class="legal-container">
+    <h1>Privacy Policy</h1>
+    <p><strong>Effective Date:</strong> June 2, 2025</p>
+
+    <h2>1. What We Collect</h2>
+    <p>We collect your name, email, organization, and the target IP/domain submitted through our request form.</p>
+
+    <h2>2. How We Use Information</h2>
+    <p>We use this data to perform scans, send reports, and contact you. Data is not sold or shared with third parties.</p>
+
+    <h2>3. Data Sharing</h2>
+    <p>Data is confidential and shared only with you. Reports are sent via secure email and stored securely.</p>
+
+    <h2>4. Your Rights</h2>
+    <ul>
+      <li>Request your data</li>
+      <li>Request data deletion</li>
+      <li>Withdraw consent</li>
+    </ul>
+
+    <h2>5. Cookies</h2>
+    <p>We may use basic cookies or analytics tools for performance tracking. No personal info is tracked without consent.</p>
+
+    <h2>6. Policy Updates</h2>
+    <p>We may update this policy. You will be notified of major changes.</p>
+
+    <h2>7. Contact</h2>
+    <p>privacy@cybershieldlite.com</p>
+  </main>
+
+  <footer style="background-color:#0A1F44; color:white; text-align:center; padding:1.5rem 1rem 0.5rem 1rem;">
+    <p style="margin: 0 0 1rem 0;">&copy; 2025 CyberShield Lite. Securing Kenya's Digital Future.</p>
+    <img src="assets/footer.png" alt="CyberShield Lite Footer Banner" style="width:100%; max-height:1.5cm; object-fit:contain; display:block;">
+  </footer>
+</body>
+</html>
 
