--- a/features.html
+++ b/features.html
@@ -95,14 +95,21 @@
   </main>
 
   <footer style="background-color:#0A1F44; color:white; text-align:center; padding:1.5rem 1rem 0.5rem 1rem;">
-    <p style="margin: 0 0 1rem 0; font-size: 1rem;">
-      &copy; 2025 CyberShield Lite. Securing Kenya's Digital Future.
-    </p>
-    <div style="width:100%; overflow:hidden; margin-top:0.5rem;">
-      <img src="assets/footer.png"
-           alt="CyberShield Lite Footer Banner"
-           style="width:100%; max-height:1.5cm; object-fit:contain; display:block;">
-    </div>
-  </footer>
+  <p style="margin: 0 0 0.5rem 0; font-size: 1rem;">
+    &copy; 2025 CyberShield Lite. Securing Kenya's Digital Future.
+  </p>
+
+  <p style="margin: 0; font-size: 0.9rem;">
+    <a href="terms.html" style="color: #00D1B2; text-decoration: none; margin-right: 1rem;">Terms of Service</a>
+    <a href="privacy.html" style="color: #00D1B2; text-decoration: none;">Privacy Policy</a>
+  </p>
+
+  <div style="width:100%; overflow:hidden; margin-top:0.5rem;">
+    <img src="assets/footer.png"
+         alt="CyberShield Lite Footer Banner"
+         style="width:100%; max-height:1.5cm; object-fit:contain; display:block;">
+  </div>
+</footer>
+
 </body>
 </html>
