--- a/request.html
+++ b/request.html
@@ -78,7 +78,8 @@
 
   <p style="margin: 0; font-size: 0.9rem;">
     <a href="terms.html" style="color: #00D1B2; text-decoration: none; margin-right: 1rem;">Terms of Service</a>
-    <a href="privacy.html" style="color: #00D1B2; text-decoration: none;">Privacy Policy</a>
+    <a href="privacy.html" style="color: #00D1B2; text-decoration: none; margin-right: 1rem;">Privacy Policy</a>
+    <a href="compliance.html" style="color: #00D1B2; text-decoration: none;">Compliance</a>
   </p>
 
   <div style="width:100%; overflow:hidden; margin-top:0.5rem;">
