--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,13 @@
   <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
+  
+<div id="cookie-banner" style="background: #f9f9f9; color: #333; padding: 0.7rem; text-align: center; font-size: 0.9rem; border-bottom: 1px solid #ccc;">
+  This website uses cookies and collects basic info for analytics and service delivery. By using this site, you agree to our
+  <a href="privacy.html" style="color: #0A1F44; text-decoration: underline;">Privacy Policy</a>.
+  <button onclick="document.getElementById('cookie-banner').style.display='none'" style="margin-left: 1rem; background: #00D1B2; color: white; border: none; padding: 0.3rem 0.8rem; cursor: pointer; border-radius: 4px;">OK</button>
+</div>
+
   <header>
     <div class="nav-container">
       <img src="assets/back.png" alt="CyberShield Lite Logo" class="logo" />
