--- a/index.html
+++ b/index.html
@@ -101,6 +101,37 @@
   <p>Get a vulnerability scan and detailed report in under 24 hours.</p>
   <a href="request.html" class="btn-primary">Book My Scan</a>
 </section>
+<section class="compliance-badges" style="padding: 2rem; background: #f0f8ff; text-align: center;">
+  <h2 style="color: #0A1F44;">🔐 Compliance & Security Standards</h2>
+  <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 1.5rem; margin-top: 1.5rem;">
+
+    <div style="flex: 0 0 140px; text-align: center;">
+      <img src="assets/badge_gdpr.png" alt="GDPR Compliant" style="width: 60px;">
+      <p style="font-size: 0.9rem;">GDPR-Aligned</p>
+    </div>
+
+    <div style="flex: 0 0 140px; text-align: center;">
+      <img src="assets/badge_kdpa.png" alt="Kenya Data Protection Act" style="width: 60px;">
+      <p style="font-size: 0.9rem;">Kenya Data Protection Act</p>
+    </div>
+
+    <div style="flex: 0 0 140px; text-align: center;">
+      <img src="assets/badge_ssl.png" alt="SSL Secured" style="width: 60px;">
+      <p style="font-size: 0.9rem;">TLS/SSL Secured</p>
+    </div>
+
+    <div style="flex: 0 0 140px; text-align: center;">
+      <img src="assets/badge_cvss.png" alt="CVSS CVE Reporting" style="width: 60px;">
+      <p style="font-size: 0.9rem;">CVSS + CVE Reporting</p>
+    </div>
+
+    <div style="flex: 0 0 140px; text-align: center;">
+      <img src="assets/badge_consent.png" alt="Consent Based" style="width: 60px;">
+      <p style="font-size: 0.9rem;">Consent-Only Scanning</p>
+    </div>
+
+  </div>
+</section>
 
 <footer style="background-color:#0A1F44; color:white; text-align:center; padding:1.5rem 1rem 0.5rem 1rem;">
   <p style="margin: 0 0 0.5rem 0; font-size: 1rem;">
