--- a/features.html
+++ b/features.html
@@ -73,6 +73,7 @@
         <a href="pricing.html">Pricing</a>
         <a href="request.html">Request a Scan</a>
         <a href="documents.html">Documents</a>
+        <a href="faq.html">FAQ</a>
         <a href="contact.html">Contact</a>
       </nav>
     </div>
