--- a/faq.html
+++ b/faq.html
@@ -63,6 +63,9 @@
            alt="CyberShield Lite Footer Banner"
            style="width:100%; max-height:1.5cm; object-fit:contain; display:block;">
     </div>
+     <p style="font-size: 0.75rem; color: #ccc; margin-top: 1rem;">
+  Disclaimer: CyberShield Lite provides passive vulnerability scanning only. We do not conduct penetration testing, exploit delivery, or unauthorized assessments. All scans are performed on client-authorized systems only.
+</p>
   </footer>
 
 </body>
