--- a/faq.html
+++ b/faq.html
@@ -57,7 +57,8 @@
   </main>
 
   <footer style="background-color:#0A1F44; color:white; text-align:center; padding:1.5rem 1rem 0.5rem 1rem;">
-    <p style="margin: 0 0 1rem 0; font-size: 1rem;">&copy; 2025 CyberShield Lite. Securing Kenya's Digital Future.</p>
+    <p style="margin: 0 0 1rem 0; font-size: 1rem;">&copy; 2025 CyberShield Lite. Securing Kenya's Digital Future.
+    </p>
     <div style="width:100%; overflow:hidden; margin-top:0.5rem;">
       <img src="assets/footer.png"
            alt="CyberShield Lite Footer Banner"
