--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
       <a href="request.html">Request a Scan</a>
       <a href="documents.html">Documents</a>
       <a href="faq.html">FAQ</a>
+      <a href="portal.html">Portal</a>
       <a href="contact.html">Contact</a>
     </nav>
   </div>
