--- a/portal.html
+++ b/portal.html
@@ -40,12 +40,16 @@
   </main>
 
   <footer style="background-color:#0A1F44; color:white; text-align:center; padding:1.5rem 1rem 0.5rem 1rem;">
-    <p style="margin: 0 0 1rem 0; font-size: 1rem;">&copy; 2025 CyberShield Lite. Securing Kenya's Digital Future.</p>
+    <p style="margin: 0 0 1rem 0; font-size: 1rem;">&copy; 2025 CyberShield Lite. Securing Kenya's Digital Future.
+    </p>
     <div style="width:100%; overflow:hidden; margin-top:0.5rem;">
       <img src="assets/footer.png"
            alt="CyberShield Lite Footer Banner"
            style="width:100%; max-height:1.5cm; object-fit:contain; display:block;">
     </div>
+    <p style="font-size: 0.75rem; color: #ccc; margin-top: 1rem;">
+  Disclaimer: CyberShield Lite provides passive vulnerability scanning only. We do not conduct penetration testing, exploit delivery, or unauthorized assessments. All scans are performed on client-authorized systems only.
+</p>
   </footer>
 </body>
 </html>
